@@ -1,4 +1,7 @@
-0
+10
+- Add deluge-client
+
+9
 - Update to 2.17.22
 
 8
